fixed header positioning and text wraparound

--- a/src/DotHiv/WebsiteCharityBundle/Resources/public/bootstrap-custom/custom-other.less
+++ b/src/DotHiv/WebsiteCharityBundle/Resources/public/bootstrap-custom/custom-other.less
@@ -110,7 +110,3 @@ h3 {
     padding: 0;
     margin: 0; 
 }
-
-//japp
-//----------------------------------
-.dropdown-icon.pull-right { margin-left: 10px; }
