--- a/src/DotHiv/WebsiteCharityBundle/Resources/public/bootstrap-custom/language-chooser.less
+++ b/src/DotHiv/WebsiteCharityBundle/Resources/public/bootstrap-custom/language-chooser.less
@@ -1,4 +1,7 @@
 .language-chooser {
+    
+    & * i { margin-left: 10px; }
+    
     button.langchooser {
         color: #808080;
         background-color: white;
